DGC-152 - Correct body height so footer doesn’t overlap on content

--- a/docroot/themes/custom/twentyseventeen/sass/base/elements/_elements.scss
+++ b/docroot/themes/custom/twentyseventeen/sass/base/elements/_elements.scss
@@ -8,7 +8,6 @@ html {
 html,
 body {
   min-height: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
 }
